[package]
name = "to_that"
version = "1.0.1"
edition = "2021"
description = "Declarative compile safe explict type conversion. Useful for chaining."
repository = "https://github.com/mcmah309/to_that"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
